fixed arrow alignment

--- a/static/css/components/carousel--js.less
+++ b/static/css/components/carousel--js.less
@@ -8,6 +8,7 @@
   .slick-slider {
     // allow overflow now the carousel has been initialised.
     overflow: visible;
+    display: flex;
   }
 }
 .carousel {
